2004-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (CONFIGARGS):
	* libs/vpacket.h (ConfigWinPacket):
	put window_flags at end of structure

2004-07-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (CONFIGARGS):
	(OLDCONFIGARGS):
	(SETOLDFLAGS):
	(SendConfig):
	(BroadcastConfig):
	removed old module interface
	(CONFIGARGS):

	* libs/vpacket.h (ConfigWinPacket):
	64 bit fix

2004-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/execcontext.c (__exc_change_context):
	fixed handling of etrigger event, fixing a problem with PropertyNotify
	events during resizing and possibly other problems too

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	fixed traveling windows if application changed gravity hint before
	recapture

	* fvwm/frame.c (combine_decor_gravities):
	(combine_gravities):
	renamed
	(frame_restore_client_gravities):
	fixed window gravity after resize

	* libs/FEvent.c (FPeekEvent):
	(FPeekIfEvent):
	(FCheckPeekIfEvent):
	fixed some event handling bugs

	* fvwm/conditional.c (CMD_Test):
	(match_version):
	corrected use of Bool types
	(match_version):
	simplified, fixed compilation
	(ver):
	use int as return type

	* libs/Ficonv.c (convert_charsets):
	reindented

	* libs/Ficonv.c (convert_charsets):
	* acinclude.m4 (ICONV_SECOND_ARG):
	rewrote iconf configure test to save an ifdef

2004-07-07  Scott Smedley  <scottie7@tpg.com.au>
	* fvwm/fvwm.1.in:
	* libs/Bindings.h:
	* libs/Bindings.c:
	* fvwm/bindings.c:
	Allow user to specify window-specific bindings that should NOT be
	intercepted by FVWM. This is accomplished with an '--' binding action.

2004-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (__resize_window):
	Fixed event handling

	* fvwm/virtual.c (HandlePaging):
	removed check for leave events on pan frames; better query the pointer
	each time

2004-07-06  Scott Smedley  <scottie7@tpg.com.au>

	* fvwm/fvwm.1.in:
	* fvwm/conditional.c: