@@ -1,3 +1,12 @@
+2004-07-11  Scott Smedley  <scottie7@tpg.com.au>
+
+	* fvwm/conditional.c:
+	* fvwm/fvwm.h:
+	* fvwm/fvwm.1.in:
+	* AUTHORS:
+	Committed patch by Norman Yarvin (with a few minor mods) to extend
+	conditionals to handle multiple window names.
+
 2004-07-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/module_interface.c (CONFIGARGS):
